--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-fastify": "^7.6.18",
     "commander": "^8.0.0",
+    "nestjs-command": "^2.0.0",
     "nestjs-console": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
